# aria2-next

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile.am  README.android  README.md  README.mingw  README.rst  configure.ac
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  build_packaging.yml  config.yml  crash_report.yml  feature_request.yml  usage_question.yml
.github/workflows/: ci.yml  docker-publish.yml  docker.yml  release.yml
cmake/: Sources.cmake  TestSources.cmake  config.h.cmake.in  libaria2.pc.cmake.in
cmake/modules/: FeatureChecks.cmake  GeneratedFiles.cmake  Options.cmake  Summary.cmake  Targets.cmake  Tests.cmake
doc/: requirements.txt
doc/manual-src/en/: conf.py.in
doc/manual-src/pt/: README.rst  conf.py.in
doc/manual-src/ru/: conf.py.in
docs/: CONTRIBUTING.md  INTEGRATION.md  PRIVACY.md  README.md  RELEASE.md  SECURITY.md  TROUBLESHOOTING.md
docs/completion/: aria2-next  make_bash_completion.py
docs/maintenance/: README.md  cmake-migration-progress.md  ed2k-implementation-checkpoints.md  issue-review-matrix.csv  open-issue-review.md
docs/maintenance/core-modernization/: capability-ledger.csv  dependency-ledger.csv  progress.md  roadmap.csv
docs/maintenance/core-modernization/checkpoints/: CM-003-build-baseline.csv  CM-005-libcurl-transfer-foundation.csv  CM-006-http-feature-parity.csv  CM-008-cookie-auth-proxy-cleanup.csv  CM-009-rpc-beast-server.csv  CM-018-packaging-release-closure.csv  CM-019-final-validation.csv  CM-020-native-resolver.csv
docs/maintenance/ed2k/: checkpoints.csv  overview.md  progress.md  reference-parity.csv
docs/maintenance/ed2k-download-hardening/: capability-ledger.csv  overview.md  progress.md  roadmap.csv
docs/maintenance/ed2k-download-hardening/checkpoints/: AR00-tracker.csv  AR10-identity.csv  AR100-capability-docs.csv  AR20-source-model.csv  AR30-server-discovery.csv  AR40-kad-discovery.csv  AR50-peer-lifecycle.csv  AR60-queue-reask.csv  AR70-lowid-callback.csv  AR80-transfer-pacing.csv  AR90-sharing-credits.csv
docs/maintenance/ed2k-refactor/: checkpoint-index.csv  checkpoints.csv  overview.md  progress.md  reference-audit.csv  reference-ledger.csv
docs/maintenance/ed2k-refactor/checkpoints/: 00-foundation.csv  10-links-metadata.csv  20-server.csv  30-peer.csv  40-transfer-integrity.csv  50-discovery-policy.csv  60-sharing-upload.csv  70-search-rpc-docs.csv
docs/maintenance/libtorrent-bt-migration/: capability-ledger.csv  overview.md  progress.md  roadmap.csv
docs/maintenance/libtorrent-bt-migration/checkpoints/: BTM-001-foundation.csv  BTM-002-build.csv  BTM-003-ingress.csv  BTM-004-runtime.csv  BTM-005-status-progress.csv  BTM-006-persistence.csv  BTM-007-controls.csv  BTM-008-native-cleanup.csv  BTM-009-non-bt-stall.csv  BTM-010-docs-packaging.csv  BTM-011-validation.csv
docs/manual/en/: aria2-next.rst  aria2c.rst  conf.py.in  index.rst  overview.rst  technical-notes.rst
maintenance/: modernization-progress.md
packaging/: README.md  dependencies.env
packaging/docker/: Dockerfile  Dockerfile.android  Dockerfile.mingw
packaging/legacy/: README.md
packaging/macos/: makerelease-osx.mk
packaging/notes/: ANDROID.md  WINDOWS.md
packaging/scripts/: android-release  check-runtime-deps  common.sh  makerelease  mingw-release  release-size-profile  release-smoke  size-audit  verify-runner-tools
po/: README.rst
scripts/: bump-version.sh  release.sh
src/: AbstractCommand.cc  AbstractCommand.h  AbstractDiskWriter.cc  AbstractDiskWriter.h  AbstractHttpServerResponseCommand.cc  AbstractProxyRequestCommand.cc  AbstractSingleDiskAdaptor.cc  ActivePeerConnectionCommand.cc  AdaptiveFileAllocationIterator.cc  AdaptiveURISelector.cc  AsioPumpCommand.cc  AsioPumpCommand.h  AsioRuntime.cc  AsyncNameResolver.cc  AsyncNameResolver.h  AsyncNameResolverMan.cc  AsyncNameResolverMan.h  BackupIPv4ConnectCommand.cc  BinaryStream.h  BtDependency.cc  BtFileAllocationEntry.cc  BtLeecherStateChoke.cc  BtPeerBlocklist.cc  BtPeerBlocklist.h  BtPieceMessage.cc  BtPortMessage.cc  BtPostDownloadHandler.cc  BtRegistry.cc  BtRegistry.h  BtSeederStateChoke.cc  BtSetup.cc  BtStopDownloadCommand.cc  CheckIntegrityCommand.cc  CheckIntegrityDispatcherCommand.cc  Command.cc  ConnectCommand.cc  ConsoleStatCalc.cc  Context.cc  ContextAttribute.cc  ContextAttribute.h  (+289 more)
src/includes/aria2/: aria2.h
test/: AsyncNameResolverManTest.cc  AsyncNameResolverTest.cc  Makefile.am
tests/: AbstractCommandTest.cc  AllTest.cc  Aria2ApiTest.cc  AsyncNameResolverManTest.cc  BittorrentHelperTest.cc  BtDependencyTest.cc  BtPeerBlocklistTest.cc  BtPostDownloadHandlerTest.cc  BufferedFileTest.cc  ChunkedDecodingStreamFilterTest.cc  CurlRequestContextTest.cc  DefaultBtProgressInfoFileTest.cc  DefaultPeerStorageTest.cc  DefaultProgressInfoFileTest.cc  DirectDiskAdaptorTest.cc  DownloadEngineTest.cc  DownloadHelperTest.cc  Ed2kCommandTest.cc  Ed2kHelperTest.cc  Ed2kKadStateTest.cc  Ed2kPolicyWindowsMacroSmokeTest.cc  Ed2kShareIndexTest.cc  Ed2kSharedStoreTest.cc  Ed2kUploadQueueTest.cc  ExceptionTest.cc  FeatureConfigTest.cc  FileEntryTest.cc  GZipEncoderTest.cc  HttpAdaptiveWindowTest.cc  HttpErrorPageDetectorTest.cc  HttpHeaderProcessorTest.cc  HttpHeaderTest.cc  HttpRangeValidatorTest.cc  HttpRequestTest.cc  HttpResponseTest.cc  LibtorrentSeedPolicyTest.cc  LogTest.cc  MagnetTest.cc  MockPeerStorage.h  MockPieceStorage.h  (+26 more)
tools/: README.md  build_test.sh  import-po
