cmake_minimum_required(VERSION 3.25)

project(
  aria2
  VERSION 1.37.0
  DESCRIPTION "High speed download utility"
  HOMEPAGE_URL "https://aria2.github.io/"
  LANGUAGES C CXX)

include(CheckCSourceCompiles)
include(CheckCSourceRuns)
include(CheckCXXSourceCompiles)
include(CheckCXXSymbolExists)
include(CheckFunctionExists)
include(CheckIncludeFile)
include(CheckIncludeFileCXX)
include(CheckLibraryExists)
include(CheckStructHasMember)
include(CheckSymbolExists)
include(CheckTypeSize)
include(CMakePushCheckState)
include(GNUInstallDirs)
include(TestBigEndian)

find_package(PkgConfig)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

option(ARIA2_ENABLE_SSL "Enable SSL/TLS support" ON)
option(ARIA2_ENABLE_BITTORRENT "Enable BitTorrent support" ON)
option(ARIA2_ENABLE_METALINK "Enable Metalink support" ON)
option(ARIA2_ENABLE_WEBSOCKET "Enable WebSocket support" ON)
option(ARIA2_ENABLE_EPOLL "Enable epoll support where available" ON)
option(ARIA2_ENABLE_LIBARIA2 "Build and install libaria2" OFF)
option(ARIA2_ENABLE_WERROR "Treat compiler warnings as errors" OFF)
option(ARIA2_ENABLE_STATIC "Prefer static dependency discovery and static release linking" OFF)
option(ARIA2_WITH_APPLETLS "Use Apple native TLS where available" ON)
option(ARIA2_WITH_WINTLS "Use Windows native TLS where available" ON)
option(ARIA2_WITH_GNUTLS "Use GnuTLS where available" ON)
option(ARIA2_WITH_OPENSSL "Use OpenSSL where available" ON)
option(ARIA2_WITH_LIBNETTLE "Use nettle where available" ON)
option(ARIA2_WITH_GMP "Use GMP where available" ON)
option(ARIA2_WITH_LIBGCRYPT "Use libgcrypt where available" ON)
option(ARIA2_WITH_LIBXML2 "Use libxml2 where available" ON)
option(ARIA2_WITH_EXPAT "Use Expat where available" ON)
option(ARIA2_WITH_SQLITE3 "Use SQLite3 where available" ON)
option(ARIA2_WITH_CARES "Use c-ares where available" ON)
option(ARIA2_WITH_ZLIB "Use zlib where available" ON)
option(ARIA2_WITH_LIBSSH2 "Use libssh2 where available" ON)
option(ARIA2_WITH_LIBUV "Use libuv where available" OFF)
option(ARIA2_WITH_TCMALLOC "Use tcmalloc where available" OFF)
option(ARIA2_WITH_JEMALLOC "Use jemalloc where available" OFF)
option(ARIA2_WITH_GNUTLS_SYSTEM_CRYPTO_POLICY "Enable GnuTLS system crypto policy" OFF)

set(ARIA2_CA_BUNDLE "" CACHE FILEPATH "Default CA bundle path")
set(ARIA2_DEFAULT_DISK_CACHE "" CACHE STRING "Default disk cache size")
set(ARIA2_BASH_COMPLETION_DIR "" CACHE PATH "Bash completion installation directory")

if(ARIA2_ENABLE_STATIC)
  set(PKG_CONFIG_ARGN --static)
endif()

function(aria2_set01 variable value)
  if(${value})
    set(${variable} 1 PARENT_SCOPE)
  else()
    set(${variable} "" PARENT_SCOPE)
  endif()
endfunction()

function(aria2_check_include header variable)
  string(REGEX REPLACE "[^A-Za-z0-9]" "_" _safe "${header}")
  string(TOUPPER "${_safe}" _safe)
  check_include_file("${header}" "${variable}")
endfunction()

function(aria2_check_c_symbol symbol variable)
  set(_headers ${ARGN})
  check_symbol_exists("${symbol}" "${_headers}" "${variable}")
endfunction()

function(aria2_check_c_compiles variable source)
  check_c_source_compiles("${source}" "${variable}")
endfunction()

function(aria2_check_cxx_compiles variable source)
  check_cxx_source_compiles("${source}" "${variable}")
endfunction()

function(aria2_pkg_check module pkg)
  if(PkgConfig_FOUND)
    pkg_check_modules(${module} IMPORTED_TARGET ${pkg})
  endif()
endfunction()

function(aria2_add_pkg_target target module)
  if(TARGET PkgConfig::${module})
    target_link_libraries(${target} PUBLIC PkgConfig::${module})
  endif()
endfunction()

set(PACKAGE "aria2")
set(PACKAGE_NAME "aria2")
set(PACKAGE_TARNAME "aria2")
set(PACKAGE_VERSION "${PROJECT_VERSION}")
set(PACKAGE_STRING "aria2 ${PROJECT_VERSION}")
set(PACKAGE_BUGREPORT "https://github.com/aria2/aria2/issues")
set(PACKAGE_URL "https://aria2.github.io/")
set(VERSION "${PROJECT_VERSION}")
set(BUILD "${CMAKE_SYSTEM_PROCESSOR}-${CMAKE_SYSTEM_NAME}")
set(HOST "${CMAKE_SYSTEM_PROCESSOR}-${CMAKE_SYSTEM_NAME}")
set(TARGET "${CMAKE_SYSTEM_PROCESSOR}-${CMAKE_SYSTEM_NAME}")
set(CXX11_OVERRIDE "override")
set(STDC_HEADERS 1)
set(HAVE_CXX11 1)
set(HAVE_ALLOCA 1)
set(SELECT_TYPE_ARG1 int)
set(SELECT_TYPE_ARG234 "(fd_set *)")
set(SELECT_TYPE_ARG5 "(struct timeval *)")

if(ARIA2_CA_BUNDLE)
  set(CA_BUNDLE "${ARIA2_CA_BUNDLE}")
endif()
if(ARIA2_DEFAULT_DISK_CACHE)
  set(DEFAULT_DISK_CACHE "${ARIA2_DEFAULT_DISK_CACHE}")
endif()

if(WIN32)
  set(SECURITY_WIN32 1)
endif()

aria2_check_include("alloca.h" HAVE_ALLOCA_H)
aria2_check_include("argz.h" HAVE_ARGZ_H)
aria2_check_include("arpa/inet.h" HAVE_ARPA_INET_H)
aria2_check_include("dlfcn.h" HAVE_DLFCN_H)
aria2_check_include("fcntl.h" HAVE_FCNTL_H)
aria2_check_include("float.h" HAVE_FLOAT_H)
aria2_check_include("ifaddrs.h" HAVE_IFADDRS_H)
aria2_check_include("inttypes.h" HAVE_INTTYPES_H)
aria2_check_include("io.h" HAVE_IO_H)
aria2_check_include("iphlpapi.h" HAVE_IPHLPAPI_H)
aria2_check_include("langinfo.h" HAVE_LANGINFO_H)
aria2_check_include("limits.h" HAVE_LIMITS_H)
aria2_check_include("locale.h" HAVE_LOCALE_H)
aria2_check_include("malloc.h" HAVE_MALLOC_H)
aria2_check_include("memory.h" HAVE_MEMORY_H)
aria2_check_include("mmsystem.h" HAVE_MMSYSTEM_H)
aria2_check_include("netdb.h" HAVE_NETDB_H)
aria2_check_include("netinet/in.h" HAVE_NETINET_IN_H)
aria2_check_include("netinet/tcp.h" HAVE_NETINET_TCP_H)
aria2_check_include("poll.h" HAVE_POLL_H)
aria2_check_include("port.h" HAVE_PORT_H)
aria2_check_include("pwd.h" HAVE_PWD_H)
aria2_check_include("share.h" HAVE_SHARE_H)
aria2_check_include("signal.h" HAVE_SIGNAL_H)
aria2_check_include("stdbool.h" HAVE_STDBOOL_H)
aria2_check_include("stddef.h" HAVE_STDDEF_H)
aria2_check_include("stdint.h" HAVE_STDINT_H)
aria2_check_include("stdio.h" HAVE_STDIO_H)
aria2_check_include("stdio_ext.h" HAVE_STDIO_EXT_H)
aria2_check_include("stdlib.h" HAVE_STDLIB_H)
aria2_check_include("string.h" HAVE_STRING_H)
aria2_check_include("strings.h" HAVE_STRINGS_H)
aria2_check_include("sys/ioctl.h" HAVE_SYS_IOCTL_H)
aria2_check_include("sys/param.h" HAVE_SYS_PARAM_H)
aria2_check_include("sys/resource.h" HAVE_SYS_RESOURCE_H)
aria2_check_include("sys/select.h" HAVE_SYS_SELECT_H)
aria2_check_include("sys/signal.h" HAVE_SYS_SIGNAL_H)
aria2_check_include("sys/socket.h" HAVE_SYS_SOCKET_H)
aria2_check_include("sys/stat.h" HAVE_SYS_STAT_H)
aria2_check_include("sys/time.h" HAVE_SYS_TIME_H)
aria2_check_include("sys/types.h" HAVE_SYS_TYPES_H)
aria2_check_include("sys/uio.h" HAVE_SYS_UIO_H)
aria2_check_include("sys/utsname.h" HAVE_SYS_UTSNAME_H)
aria2_check_include("termios.h" HAVE_TERMIOS_H)
aria2_check_include("unistd.h" HAVE_UNISTD_H)
aria2_check_include("utime.h" HAVE_UTIME_H)
aria2_check_include("vfork.h" HAVE_VFORK_H)
aria2_check_include("wchar.h" HAVE_WCHAR_H)
aria2_check_include("windows.h" HAVE_WINDOWS_H)
aria2_check_include("winsock2.h" HAVE_WINSOCK2_H)
aria2_check_include("ws2tcpip.h" HAVE_WS2TCPIP_H)

if(WIN32)
  check_cxx_source_compiles("
#include <winsock2.h>
#include <windows.h>
#include <winioctl.h>
int main() {
  DWORD bytesReturned = 0;
  (void)bytesReturned;
  return FSCTL_SET_SPARSE == 0;
}" HAVE_WINIOCTL_H)
else()
  aria2_check_include("winioctl.h" HAVE_WINIOCTL_H)
endif()

check_type_size("ptrdiff_t" PTRDIFF_T LANGUAGE CXX)
if(HAVE_PTRDIFF_T)
  set(HAVE_PTRDIFF_T 1)
endif()
check_cxx_source_compiles("
#include <time.h>
int main() {
  struct timespec value;
  (void)value;
  return 0;
}" ARIA2_HAVE_STRUCT_TIMESPEC)
if(ARIA2_HAVE_STRUCT_TIMESPEC)
  set(HAVE_A2_STRUCT_TIMESPEC 1)
endif()
test_big_endian(WORDS_BIGENDIAN)
if(WORDS_BIGENDIAN)
  set(WORDS_BIGENDIAN 1)
else()
  set(WORDS_BIGENDIAN "")
endif()

aria2_check_c_symbol(__argz_count HAVE___ARGZ_COUNT "argz.h")
aria2_check_c_symbol(__argz_next HAVE___ARGZ_NEXT "argz.h")
aria2_check_c_symbol(__argz_stringify HAVE___ARGZ_STRINGIFY "argz.h")
aria2_check_c_symbol(alarm HAVE_ALARM "unistd.h")
aria2_check_c_symbol(atexit HAVE_ATEXIT "stdlib.h")
aria2_check_c_symbol(basename HAVE_BASENAME "libgen.h")
aria2_check_c_symbol(daemon HAVE_DAEMON "unistd.h")
aria2_check_c_symbol(epoll_create HAVE_EPOLL_CREATE "sys/epoll.h")
aria2_check_c_symbol(fallocate HAVE_FALLOCATE "fcntl.h")
aria2_check_c_symbol(fork HAVE_FORK "unistd.h")
aria2_check_c_symbol(ftruncate HAVE_FTRUNCATE "unistd.h")
aria2_check_c_symbol(gai_strerror HAVE_GAI_STRERROR "netdb.h")
aria2_check_c_symbol(getaddrinfo HAVE_GETADDRINFO "sys/types.h;sys/socket.h;netdb.h")
aria2_check_c_symbol(getcwd HAVE_GETCWD "unistd.h")
aria2_check_c_symbol(getentropy HAVE_GETENTROPY "unistd.h")
aria2_check_c_symbol(gethostbyaddr HAVE_GETHOSTBYADDR "netdb.h")
aria2_check_c_symbol(gethostbyname HAVE_GETHOSTBYNAME "netdb.h")
aria2_check_c_symbol(getifaddrs HAVE_GETIFADDRS "ifaddrs.h")
aria2_check_c_symbol(getnameinfo HAVE_GETNAMEINFO "sys/types.h;sys/socket.h;netdb.h")
aria2_check_c_symbol(getpagesize HAVE_GETPAGESIZE "unistd.h")
aria2_check_c_symbol(gettimeofday HAVE_GETTIMEOFDAY "sys/time.h")
aria2_check_c_symbol(kqueue HAVE_KQUEUE "sys/types.h;sys/event.h")
aria2_check_c_symbol(memchr HAVE_MEMCHR "string.h")
aria2_check_c_symbol(memcpy HAVE_MEMCPY "string.h")
aria2_check_c_symbol(memmove HAVE_MEMMOVE "string.h")
aria2_check_c_symbol(mempcpy HAVE_MEMPCPY "string.h")
aria2_check_c_symbol(memset HAVE_MEMSET "string.h")
aria2_check_c_symbol(mkdir HAVE_MKDIR "sys/stat.h")
aria2_check_c_symbol(mmap HAVE_MMAP "sys/mman.h")
aria2_check_c_symbol(munmap HAVE_MUNMAP "sys/mman.h")
aria2_check_c_symbol(nl_langinfo HAVE_NL_LANGINFO "langinfo.h")
aria2_check_c_symbol(poll HAVE_POLL "poll.h")
aria2_check_c_symbol(port_associate HAVE_PORT_ASSOCIATE "port.h")
aria2_check_c_symbol(posix_fadvise HAVE_POSIX_FADVISE "fcntl.h")
aria2_check_c_symbol(posix_fallocate HAVE_POSIX_FALLOCATE "fcntl.h")
aria2_check_c_symbol(posix_memalign HAVE_POSIX_MEMALIGN "stdlib.h")
aria2_check_c_symbol(pow HAVE_POW "math.h")
aria2_check_c_symbol(putenv HAVE_PUTENV "stdlib.h")
aria2_check_c_symbol(rmdir HAVE_RMDIR "unistd.h")
aria2_check_c_symbol(select HAVE_SELECT "sys/select.h")
aria2_check_c_symbol(setlocale HAVE_SETLOCALE "locale.h")
aria2_check_c_symbol(sigaction HAVE_SIGACTION "signal.h")
aria2_check_c_symbol(sleep HAVE_SLEEP "unistd.h")
aria2_check_c_symbol(socket HAVE_SOCKET "sys/types.h;sys/socket.h")
aria2_check_c_symbol(stpcpy HAVE_STPCPY "string.h")
aria2_check_c_symbol(strcasecmp HAVE_STRCASECMP "strings.h")
aria2_check_c_symbol(strchr HAVE_STRCHR "string.h")
aria2_check_c_symbol(strcspn HAVE_STRCSPN "string.h")
aria2_check_c_symbol(strdup HAVE_STRDUP "string.h")
aria2_check_c_symbol(strerror HAVE_STRERROR "string.h")
aria2_check_c_symbol(strftime HAVE_STRFTIME "time.h")
aria2_check_c_symbol(strncasecmp HAVE_STRNCASECMP "strings.h")
aria2_check_c_symbol(strstr HAVE_STRSTR "string.h")
aria2_check_c_symbol(strtol HAVE_STRTOL "stdlib.h")
aria2_check_c_symbol(strtoul HAVE_STRTOUL "stdlib.h")
aria2_check_c_symbol(strtoull HAVE_STRTOULL "stdlib.h")
aria2_check_c_symbol(timegm HAVE_TIMEGM "time.h")
aria2_check_c_symbol(tzset HAVE_TZSET "time.h")
aria2_check_c_symbol(unsetenv HAVE_UNSETENV "stdlib.h")
aria2_check_c_symbol(usleep HAVE_USLEEP "unistd.h")
aria2_check_c_symbol(utime HAVE_UTIME "utime.h")
aria2_check_c_symbol(utimes HAVE_UTIMES "sys/time.h")
aria2_check_c_symbol(vfork HAVE_VFORK "unistd.h")
aria2_check_c_symbol(vprintf HAVE_VPRINTF "stdio.h")

aria2_check_c_compiles(HAVE_ASCTIME_R "
#include <time.h>
int main(void) {
  struct tm value;
  char buffer[32];
  return asctime_r(&value, buffer) == 0;
}")

aria2_check_c_compiles(HAVE_LOCALTIME_R "
#include <time.h>
int main(void) {
  time_t value = 0;
  struct tm result;
  return localtime_r(&value, &result) == 0;
}")

aria2_check_c_compiles(HAVE_STRPTIME "
#include <time.h>
int main(void) {
  struct tm result;
  return strptime(\"1970\", \"%Y\", &result) == 0;
}")

aria2_check_c_compiles(HAVE_WORKING_FORK "
#include <sys/types.h>
#include <unistd.h>
int main(void) {
  pid_t pid = fork();
  return pid == (pid_t)-1;
}")

aria2_check_c_compiles(HAVE_WORKING_VFORK "
#include <sys/types.h>
#include <unistd.h>
int main(void) {
  pid_t pid = vfork();
  return pid == (pid_t)-1;
}")

if(WIN32)
  set(HAVE_GETADDRINFO 1)
  set(HAVE_GAI_STRERROR "")
endif()

if(ARIA2_ENABLE_EPOLL AND HAVE_EPOLL_CREATE)
  set(HAVE_EPOLL 1)
endif()

if(HAVE_POSIX_FALLOCATE OR HAVE_FALLOCATE OR APPLE OR WIN32)
  set(HAVE_SOME_FALLOCATE 1)
endif()

check_struct_has_member("struct sockaddr_in" sin_len "sys/types.h;sys/socket.h;netinet/in.h" HAVE_SOCKADDR_IN_SIN_LEN LANGUAGE CXX)
check_struct_has_member("struct sockaddr_in6" sin6_len "sys/types.h;sys/socket.h;netinet/in.h" HAVE_SOCKADDR_IN6_SIN6_LEN LANGUAGE CXX)

check_cxx_source_compiles("
#include <unistd.h>
#include <getopt.h>
int main() {
  const char* name = \"name\";
  struct option option_value = { name, 0, 0, 0 };
  (void)option_value;
  return 0;
}" HAVE_OPTION_CONST_NAME)

if(HAVE_KQUEUE)
  check_cxx_source_compiles("
  #include <cstdint>
  #include <sys/types.h>
  #include <sys/event.h>
  #include <sys/time.h>
  int main() {
    struct kevent event;
    event.udata = reinterpret_cast<intptr_t>(&event);
    return 0;
  }" KEVENT_UDATA_INTPTR_T)
endif()

if(APPLE)
  set(HAVE_CFLOCALECOPYCURRENT 1)
  set(HAVE_CFPREFERENCESCOPYAPPVALUE 1)
endif()

aria2_pkg_check(ZLIB "zlib>=1.2.3")
if(ARIA2_WITH_ZLIB AND ZLIB_FOUND)
  set(HAVE_ZLIB 1)
  cmake_push_check_state(RESET)
  set(CMAKE_REQUIRED_LIBRARIES PkgConfig::ZLIB)
  check_function_exists(gzbuffer HAVE_GZBUFFER)
  check_function_exists(gzsetparams HAVE_GZSETPARAMS)
  cmake_pop_check_state()
endif()

aria2_pkg_check(LIBXML2 "libxml-2.0>=2.6.24")
if(ARIA2_WITH_LIBXML2 AND LIBXML2_FOUND)
  set(HAVE_LIBXML2 1)
endif()

if(ARIA2_WITH_EXPAT AND NOT HAVE_LIBXML2)
  aria2_pkg_check(EXPAT "expat")
  if(EXPAT_FOUND)
    set(HAVE_LIBEXPAT 1)
  endif()
endif()

aria2_pkg_check(SQLITE3 "sqlite3")
if(ARIA2_WITH_SQLITE3 AND SQLITE3_FOUND)
  set(HAVE_SQLITE3 1)
  cmake_push_check_state(RESET)
  set(CMAKE_REQUIRED_LIBRARIES PkgConfig::SQLITE3)
  check_function_exists(sqlite3_open_v2 HAVE_SQLITE3_OPEN_V2)
  cmake_pop_check_state()
endif()

aria2_pkg_check(LIBCARES "libcares>=1.16.0")
if(ARIA2_WITH_CARES AND LIBCARES_FOUND)
  set(HAVE_LIBCARES 1)
  set(ENABLE_ASYNC_DNS 1)
endif()

aria2_pkg_check(LIBSSH2 "libssh2")
if(ARIA2_WITH_LIBSSH2 AND LIBSSH2_FOUND)
  set(HAVE_LIBSSH2 1)
endif()

aria2_pkg_check(LIBUV "libuv>=1.13")
if(ARIA2_WITH_LIBUV AND LIBUV_FOUND)
  set(HAVE_LIBUV 1)
endif()

aria2_pkg_check(LIBGNUTLS "gnutls>=2.2.0")
aria2_pkg_check(OPENSSL "openssl>=0.9.8")
aria2_pkg_check(LIBNETTLE "nettle")
aria2_pkg_check(LIBGCRYPT "libgcrypt")

set(have_native_tls OFF)
if(ARIA2_ENABLE_SSL AND APPLE AND ARIA2_WITH_APPLETLS)
  set(HAVE_APPLETLS 1)
  set(ENABLE_SSL 1)
  set(have_native_tls ON)
elseif(ARIA2_ENABLE_SSL AND WIN32 AND ARIA2_WITH_WINTLS)
  set(HAVE_WINTLS 1)
  set(ENABLE_SSL 1)
  set(have_native_tls ON)
elseif(ARIA2_ENABLE_SSL AND ARIA2_WITH_GNUTLS AND LIBGNUTLS_FOUND)
  set(HAVE_LIBGNUTLS 1)
  set(ENABLE_SSL 1)
  cmake_push_check_state(RESET)
  set(CMAKE_REQUIRED_LIBRARIES PkgConfig::LIBGNUTLS)
  check_function_exists(gnutls_certificate_set_x509_system_trust HAVE_GNUTLS_CERTIFICATE_SET_X509_SYSTEM_TRUST)
  cmake_pop_check_state()
elseif(ARIA2_ENABLE_SSL AND ARIA2_WITH_OPENSSL AND OPENSSL_FOUND)
  set(HAVE_OPENSSL 1)
  set(ENABLE_SSL 1)
endif()

if(HAVE_OPENSSL)
  cmake_push_check_state(RESET)
  set(CMAKE_REQUIRED_LIBRARIES PkgConfig::OPENSSL)
  check_function_exists(EVP_DigestInit_ex HAVE_EVP_DIGESTINIT_EX)
  check_function_exists(EVP_sha224 HAVE_EVP_SHA224)
  check_function_exists(EVP_sha256 HAVE_EVP_SHA256)
  check_function_exists(EVP_sha384 HAVE_EVP_SHA384)
  check_function_exists(EVP_sha512 HAVE_EVP_SHA512)
  cmake_pop_check_state()
  if(NOT HAVE_EVP_DIGESTINIT_EX)
    set(HAVE_OLD_OPENSSL 1)
  endif()
endif()

if(ARIA2_WITH_LIBNETTLE AND LIBNETTLE_FOUND AND NOT HAVE_OPENSSL AND NOT have_native_tls)
  set(HAVE_LIBNETTLE 1)
endif()

if(ARIA2_WITH_GMP AND ARIA2_ENABLE_BITTORRENT AND NOT HAVE_OPENSSL AND (HAVE_LIBNETTLE OR have_native_tls))
  check_library_exists(gmp __gmpz_init "" HAVE_LIBGMP)
  if(HAVE_LIBGMP)
    check_library_exists(gmp __gmpz_powm_sec "" HAVE___GMPZ_POWM_SEC)
    if(HAVE___GMPZ_POWM_SEC)
      set(HAVE_GMP_SEC 1)
    endif()
  endif()
endif()

if(ARIA2_WITH_LIBGCRYPT AND LIBGCRYPT_FOUND AND NOT HAVE_OPENSSL AND NOT HAVE_LIBNETTLE AND NOT have_native_tls)
  set(HAVE_LIBGCRYPT 1)
endif()

if(HAVE_APPLETLS)
  set(USE_APPLE_MD 1)
elseif(HAVE_LIBNETTLE)
  set(USE_LIBNETTLE_MD 1)
elseif(HAVE_LIBGCRYPT)
  set(USE_LIBGCRYPT_MD 1)
elseif(HAVE_OPENSSL)
  set(USE_OPENSSL_MD 1)
else()
  set(USE_INTERNAL_MD 1)
endif()

if(NOT HAVE_LIBGMP AND NOT HAVE_LIBGCRYPT AND NOT HAVE_OPENSSL)
  set(USE_INTERNAL_BIGNUM 1)
endif()
if(NOT HAVE_LIBNETTLE AND NOT HAVE_LIBGCRYPT AND NOT HAVE_OPENSSL)
  set(USE_INTERNAL_ARC4 1)
endif()

if(ARIA2_ENABLE_BITTORRENT)
  set(ENABLE_BITTORRENT 1)
endif()
if(HAVE_LIBXML2 OR HAVE_LIBEXPAT)
  set(HAVE_SOME_XMLLIB 1)
  set(ENABLE_XML_RPC 1)
endif()
if(ARIA2_ENABLE_METALINK AND HAVE_SOME_XMLLIB)
  set(ENABLE_METALINK 1)
endif()
if(ARIA2_ENABLE_WEBSOCKET)
  set(ENABLE_WEBSOCKET 1)
endif()
if(ARIA2_ENABLE_LIBARIA2)
  set(ENABLE_LIBARIA2 1)
endif()
if(ARIA2_WITH_GNUTLS_SYSTEM_CRYPTO_POLICY)
  set(USE_GNUTLS_SYSTEM_CRYPTO_POLICY 1)
endif()

configure_file(cmake/config.h.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
configure_file(
  third_party/wslay/lib/includes/wslay/wslayver.h.in
  ${CMAKE_CURRENT_BINARY_DIR}/third_party/wslay/lib/includes/wslay/wslayver.h
  @ONLY)
configure_file(
  cmake/libaria2.pc.cmake.in
  ${CMAKE_CURRENT_BINARY_DIR}/src/libaria2.pc
  @ONLY)

include(cmake/Aria2Sources.cmake)
include(cmake/Aria2TestSources.cmake)

set(ARIA2_CORE_SOURCES ${ARIA2_SOURCES_BASE})
if(WIN32)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_MINGW_BUILD})
endif()
if(ENABLE_WEBSOCKET)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_ENABLE_WEBSOCKET})
else()
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_NOT_ENABLE_WEBSOCKET})
endif()
if(HAVE_SOME_XMLLIB)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_SOME_XMLLIB})
endif()
if(HAVE_LIBXML2)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_LIBXML2})
endif()
if(HAVE_LIBEXPAT)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_LIBEXPAT})
endif()
if(ENABLE_XML_RPC)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_ENABLE_XML_RPC})
endif()
if(HAVE_SOME_FALLOCATE)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_SOME_FALLOCATE})
endif()
if(HAVE_EPOLL)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_EPOLL})
endif()
if(ENABLE_SSL)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_ENABLE_SSL})
endif()
if(USE_APPLE_MD)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_USE_APPLE_MD})
endif()
if(HAVE_APPLETLS)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_APPLETLS})
endif()
if(HAVE_WINTLS)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_WINTLS})
endif()
if(USE_INTERNAL_MD)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_USE_INTERNAL_MD})
endif()
if(HAVE_LIBGNUTLS)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_LIBGNUTLS})
endif()
if(HAVE_LIBGCRYPT)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_LIBGCRYPT})
endif()
if(HAVE_LIBGCRYPT AND USE_LIBGCRYPT_MD)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_LIBGCRYPT__USE_LIBGCRYPT_MD})
endif()
if(HAVE_LIBNETTLE)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_LIBNETTLE})
endif()
if(HAVE_LIBNETTLE AND USE_LIBNETTLE_MD)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_LIBNETTLE__USE_LIBNETTLE_MD})
endif()
if(HAVE_LIBGMP)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_LIBGMP})
endif()
if(HAVE_OPENSSL)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_OPENSSL})
endif()
if(HAVE_OPENSSL AND NOT HAVE_APPLETLS)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_OPENSSL__NOT_HAVE_APPLETLS})
endif()
if(HAVE_OPENSSL AND USE_OPENSSL_MD)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_OPENSSL__USE_OPENSSL_MD})
endif()
if(HAVE_ZLIB)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_ZLIB})
endif()
if(HAVE_SQLITE3)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_SQLITE3})
endif()
if(HAVE_LIBSSH2)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_LIBSSH2})
endif()
if(ENABLE_ASYNC_DNS)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_ENABLE_ASYNC_DNS})
endif()
if(ENABLE_BITTORRENT)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_ENABLE_BITTORRENT})
  if(USE_INTERNAL_BIGNUM)
    list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_ENABLE_BITTORRENT__USE_INTERNAL_BIGNUM})
  endif()
  if(USE_INTERNAL_ARC4)
    list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_ENABLE_BITTORRENT__USE_INTERNAL_ARC4})
  endif()
endif()
if(ENABLE_METALINK)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_ENABLE_METALINK})
endif()
if(NOT HAVE_ASCTIME_R)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_NOT_HAVE_ASCTIME_R})
endif()
if(NOT HAVE_BASENAME)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_NOT_HAVE_BASENAME})
endif()
if(NOT HAVE_GETADDRINFO)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_NOT_HAVE_GETADDRINFO})
endif()
if(NOT HAVE_GAI_STRERROR)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_NOT_HAVE_GAI_STRERROR})
endif()
if(NOT HAVE_GETTIMEOFDAY)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_NOT_HAVE_GETTIMEOFDAY})
endif()
if(NOT HAVE_LOCALTIME_R)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_NOT_HAVE_LOCALTIME_R})
endif()
if(NOT HAVE_STRPTIME)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_NOT_HAVE_STRPTIME})
endif()
if(NOT HAVE_TIMEGM)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_NOT_HAVE_TIMEGM})
endif()
if(NOT HAVE_DAEMON)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_NOT_HAVE_DAEMON})
endif()
if(HAVE_POLL)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_POLL})
endif()
if(HAVE_PORT_ASSOCIATE)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_PORT_ASSOCIATE})
endif()
if(HAVE_KQUEUE)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_KQUEUE})
endif()
if(HAVE_LIBUV)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_HAVE_LIBUV})
endif()
if(ENABLE_LIBARIA2)
  list(APPEND ARIA2_CORE_SOURCES ${ARIA2_SOURCES_ENABLE_LIBARIA2})
endif()

list(REMOVE_DUPLICATES ARIA2_CORE_SOURCES)

add_library(wslay STATIC
  third_party/wslay/lib/wslay_event.c
  third_party/wslay/lib/wslay_frame.c
  third_party/wslay/lib/wslay_net.c
  third_party/wslay/lib/wslay_queue.c)
target_include_directories(wslay
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/wslay/lib/includes
    ${CMAKE_CURRENT_BINARY_DIR}/third_party/wslay/lib/includes
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/third_party/wslay/lib
    ${CMAKE_CURRENT_BINARY_DIR})
target_compile_definitions(wslay PRIVATE HAVE_CONFIG_H WSLAY_VERSION="${PROJECT_VERSION}")

if(ENABLE_LIBARIA2)
  add_library(aria2_core ${ARIA2_CORE_SOURCES})
  set_target_properties(aria2_core PROPERTIES OUTPUT_NAME aria2)
else()
  add_library(aria2_core STATIC ${ARIA2_CORE_SOURCES})
endif()

target_compile_definitions(aria2_core PUBLIC HAVE_CONFIG_H)
target_include_directories(aria2_core
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${CMAKE_CURRENT_SOURCE_DIR}/src/includes
    ${CMAKE_CURRENT_BINARY_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}/src/includes
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/lib)
if(ENABLE_WEBSOCKET)
  target_link_libraries(aria2_core PUBLIC wslay)
endif()
if(HAVE_ZLIB)
  aria2_add_pkg_target(aria2_core ZLIB)
endif()
if(HAVE_LIBXML2)
  aria2_add_pkg_target(aria2_core LIBXML2)
endif()
if(HAVE_LIBEXPAT)
  aria2_add_pkg_target(aria2_core EXPAT)
endif()
if(HAVE_SQLITE3)
  aria2_add_pkg_target(aria2_core SQLITE3)
endif()
if(HAVE_LIBCARES)
  aria2_add_pkg_target(aria2_core LIBCARES)
endif()
if(HAVE_LIBSSH2)
  aria2_add_pkg_target(aria2_core LIBSSH2)
endif()
if(HAVE_LIBUV)
  aria2_add_pkg_target(aria2_core LIBUV)
endif()
if(HAVE_LIBGNUTLS)
  aria2_add_pkg_target(aria2_core LIBGNUTLS)
endif()
if(HAVE_OPENSSL)
  aria2_add_pkg_target(aria2_core OPENSSL)
endif()
if(HAVE_LIBNETTLE)
  aria2_add_pkg_target(aria2_core LIBNETTLE)
endif()
if(HAVE_LIBGCRYPT)
  aria2_add_pkg_target(aria2_core LIBGCRYPT)
endif()
if(HAVE_LIBGMP)
  target_link_libraries(aria2_core PUBLIC gmp)
endif()
if(HAVE_APPLETLS)
  target_link_libraries(aria2_core PUBLIC "-framework CoreFoundation" "-framework Security")
endif()
if(WIN32)
  target_link_libraries(aria2_core PUBLIC ws2_32 wsock32 gdi32 winmm iphlpapi psapi crypt32 secur32 advapi32)
endif()
if(CMAKE_SYSTEM_NAME MATCHES "SunOS")
  target_link_libraries(aria2_core PUBLIC nsl socket)
endif()
if(ARIA2_WITH_TCMALLOC)
  aria2_pkg_check(TCMALLOC "libtcmalloc_minimal")
  if(TCMALLOC_FOUND)
    target_link_libraries(aria2_core PUBLIC PkgConfig::TCMALLOC)
  else()
    target_link_libraries(aria2_core PUBLIC tcmalloc_minimal)
  endif()
endif()
if(ARIA2_WITH_JEMALLOC)
  aria2_pkg_check(JEMALLOC "jemalloc")
  if(JEMALLOC_FOUND)
    target_link_libraries(aria2_core PUBLIC PkgConfig::JEMALLOC)
  else()
    target_link_libraries(aria2_core PUBLIC jemalloc)
  endif()
endif()

if(ARIA2_ENABLE_WERROR)
  target_compile_options(aria2_core PRIVATE -Werror)
endif()

add_executable(aria2c src/main.cc)
target_link_libraries(aria2c PRIVATE aria2_core)

install(TARGETS aria2c RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
if(ENABLE_LIBARIA2)
  install(TARGETS aria2_core
    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
  install(DIRECTORY src/includes/aria2 DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
  install(FILES ${CMAKE_CURRENT_BINARY_DIR}/src/libaria2.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
endif()

enable_testing()
aria2_pkg_check(CPPUNIT "cppunit>=1.10.2")
if(CPPUNIT_FOUND)
  set(ARIA2_TEST_SOURCES ${ARIA2_TEST_SOURCES_BASE})
  if(ENABLE_XML_RPC)
    list(APPEND ARIA2_TEST_SOURCES ${ARIA2_TEST_SOURCES_ENABLE_XML_RPC})
  endif()
  if(HAVE_SOME_FALLOCATE)
    list(APPEND ARIA2_TEST_SOURCES ${ARIA2_TEST_SOURCES_HAVE_SOME_FALLOCATE})
  endif()
  if(HAVE_ZLIB)
    list(APPEND ARIA2_TEST_SOURCES ${ARIA2_TEST_SOURCES_HAVE_ZLIB})
  endif()
  if(HAVE_SQLITE3)
    list(APPEND ARIA2_TEST_SOURCES ${ARIA2_TEST_SOURCES_HAVE_SQLITE3})
  endif()
  if(ENABLE_BITTORRENT)
    list(APPEND ARIA2_TEST_SOURCES ${ARIA2_TEST_SOURCES_ENABLE_BITTORRENT})
  endif()
  if(ENABLE_METALINK)
    list(APPEND ARIA2_TEST_SOURCES ${ARIA2_TEST_SOURCES_ENABLE_METALINK})
  endif()
  if(ENABLE_ASYNC_DNS)
    list(APPEND ARIA2_TEST_SOURCES ${ARIA2_TEST_SOURCES_ENABLE_ASYNC_DNS})
  endif()
  if(NOT HAVE_TIMEGM)
    list(APPEND ARIA2_TEST_SOURCES ${ARIA2_TEST_SOURCES_NOT_HAVE_TIMEGM})
  endif()
  if(ENABLE_LIBARIA2)
    list(APPEND ARIA2_TEST_SOURCES ${ARIA2_TEST_SOURCES_ENABLE_LIBARIA2})
  endif()
  if(NOT ENABLE_WEBSOCKET)
    list(REMOVE_ITEM ARIA2_TEST_SOURCES test/WebSocketSessionManTest.cc)
  endif()
  list(REMOVE_DUPLICATES ARIA2_TEST_SOURCES)

  add_executable(aria2_tests ${ARIA2_TEST_SOURCES})
  target_compile_definitions(aria2_tests PRIVATE HAVE_CONFIG_H A2_TEST_DIR="${CMAKE_CURRENT_SOURCE_DIR}/test" A2_TEST_OUT_DIR="test_outdir")
  target_include_directories(aria2_tests PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/test
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${CMAKE_CURRENT_SOURCE_DIR}/src/includes
    ${CMAKE_CURRENT_SOURCE_DIR}/lib
    ${CMAKE_CURRENT_BINARY_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}/src/includes)
  target_link_libraries(aria2_tests PRIVATE aria2_core PkgConfig::CPPUNIT)
  add_test(NAME aria2_tests COMMAND aria2_tests)
  set_tests_properties(aria2_tests PROPERTIES WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
endif()

message(STATUS "Build: ${BUILD}")
message(STATUS "Host: ${HOST}")
message(STATUS "Target: ${TARGET}")
message(STATUS "Features: SSL=${ENABLE_SSL}; AppleTLS=${HAVE_APPLETLS}; WinTLS=${HAVE_WINTLS}; GnuTLS=${HAVE_LIBGNUTLS}; OpenSSL=${HAVE_OPENSSL}; BitTorrent=${ENABLE_BITTORRENT}; Metalink=${ENABLE_METALINK}; XML-RPC=${ENABLE_XML_RPC}; WebSocket=${ENABLE_WEBSOCKET}; Async DNS=${ENABLE_ASYNC_DNS}; libaria2=${ENABLE_LIBARIA2}")
